--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".home.presentation.HomeActivity"
+    tools:context=".main.MainActivity"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         >
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/activity_home_toolbar"
+            android:id="@+id/activity_main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
@@ -24,28 +24,27 @@
             app:navigationIcon="@drawable/ic_app_logo"
             />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/activity_home_recycler_view"
+        <FrameLayout
+            android:id="@+id/activity_main_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/photo_item"
             />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/activity_home_fail"
+        android:id="@+id/activity_main_fail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/colorFail"
         android:textSize="@dimen/text_size_20x"
+        android:visibility="gone"
         tools:text="Error"
         />
 
     <ProgressBar
-        android:id="@+id/activity_home_progress_bar"
+        android:id="@+id/activity_main_progress_bar"
         android:layout_width="@dimen/progress_bar_size"
         android:layout_height="@dimen/progress_bar_size"
         android:layout_gravity="center"
