--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="margin_size_16x">16dp</dimen>
     <dimen name="text_size_20x">20sp</dimen>
     <dimen name="progress_bar_size">50dp</dimen>
+    <dimen name="padding_size_16x">16dp</dimen>
+    <dimen name="text_size_14x">14sp</dimen>
+    <dimen name="image_owner_photo_size">50dp</dimen>
 </resources>
