--- a/app/src/main/res/layout/fragment_image_details.xml
+++ b/app/src/main/res/layout/fragment_image_details.xml
@@ -13,7 +13,6 @@
         android:id="@+id/fragment_image_details_image_owner_photo"
         android:layout_width="@dimen/image_owner_photo_size"
         android:layout_height="@dimen/image_owner_photo_size"
-        android:layout_marginTop="@dimen/margin_size_16x"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_launcher_background"
@@ -72,8 +71,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_size_16x"
-        app:layout_constraintStart_toStartOf="@id/fragment_image_details_image_owner_photo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
