--- a/app/src/main/res/layout/fragment_favorite_images.xml
+++ b/app/src/main/res/layout/fragment_favorite_images.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:listitem="@layout/photo_item"
+    tools:listitem="@layout/image_item"
     />
