--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -8,13 +8,13 @@
     >
 
     <ImageView
-        android:id="@+id/photo_item_image"
+        android:id="@+id/image_item_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
     <TextView
-        android:id="@+id/photo_item_url"
+        android:id="@+id/image_item_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Hello"
