--- a/app/src/main/res/layout/fragment_image_details.xml
+++ b/app/src/main/res/layout/fragment_image_details.xml
@@ -44,24 +44,23 @@
         tools:text="e@mail"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/fragment_image_details_button_favorite"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_size_16x"
-        android:background="@drawable/bg_button"
-        android:src="@drawable/ic_favorite_gray"
+        android:src="@drawable/ic_favorite_border"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
         app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_download"
         app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/fragment_image_details_button_download"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/bg_button"
-        android:backgroundTint="@color/green"
-        android:src="@drawable/ic_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_save"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
         />
@@ -71,9 +70,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_size_16x"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo"
-        app:layout_constraintEnd_toEndOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
