--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            app:menu="@menu/toolbar_menu"
+            app:menu="@menu/home_toolbar_menu"
             app:navigationIcon="@drawable/ic_app_logo"
             />
 
