--- a/app/src/main/res/layout/fragment_image_details.xml
+++ b/app/src/main/res/layout/fragment_image_details.xml
@@ -1,78 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_size_16x"
     tools:context=".image_details.presentation.ImageDetailsFragment"
     >
 
-    <ImageView
-        android:id="@+id/fragment_image_details_image_owner_photo"
-        android:layout_width="@dimen/image_owner_photo_size"
-        android:layout_height="@dimen/image_owner_photo_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_launcher_background"
-        />
-
-    <TextView
-        android:id="@+id/fragment_image_details_image_owner_full_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_size_16x"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/text_size_20x"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/fragment_image_details_image_owner_email"
-        app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_favorite"
-        app:layout_constraintStart_toEndOf="@id/fragment_image_details_image_owner_photo"
-        app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
-        tools:text="Name"
-        />
-
-    <TextView
-        android:id="@+id/fragment_image_details_image_owner_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_14x"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-        app:layout_constraintStart_toStartOf="@id/fragment_image_details_image_owner_full_name"
-        app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_full_name"
-        tools:text="e@mail"
-        />
-
-    <ImageView
-        android:id="@+id/fragment_image_details_button_favorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_size_16x"
-        android:src="@drawable/ic_favorite_border"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-        app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_download"
-        app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
-        />
-
-    <ImageView
-        android:id="@+id/fragment_image_details_button_download"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_save"
-        app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
-        />
-
-    <ImageView
-        android:id="@+id/fragment_image_details_image"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_size_16x"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo"
-        />
+        android:layout_height="match_parent"
+        android:paddingHorizontal="@dimen/padding_size_16x"
+        android:paddingTop="@dimen/padding_size_16x"
+        android:layout_marginBottom="@dimen/margin_size_16x"
+        >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/fragment_image_details_image_owner_photo"
+            android:layout_width="@dimen/image_owner_photo_size"
+            android:layout_height="@dimen/image_owner_photo_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_launcher_background"
+            />
+
+        <TextView
+            android:id="@+id/fragment_image_details_image_owner_full_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_size_16x"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/text_size_20x"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/fragment_image_details_image_owner_email"
+            app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_favorite"
+            app:layout_constraintStart_toEndOf="@id/fragment_image_details_image_owner_photo"
+            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
+            tools:text="Name"
+            />
+
+        <TextView
+            android:id="@+id/fragment_image_details_image_owner_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_14x"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+            app:layout_constraintStart_toStartOf="@id/fragment_image_details_image_owner_full_name"
+            app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_full_name"
+            tools:text="e@mail"
+            />
+
+        <ImageView
+            android:id="@+id/fragment_image_details_button_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_size_16x"
+            android:src="@drawable/ic_favorite_border"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+            app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_download"
+            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
+            />
+
+        <ImageView
+            android:id="@+id/fragment_image_details_button_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_save"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
+            />
+
+        <ImageView
+            android:id="@+id/fragment_image_details_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_size_16x"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
