--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#219653</color>
+    <color name="gray">#7A7979</color>
 
     <color name="colorPrimary">#000000</color>
     <color name="colorFail">#E60505</color>
