--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="margin_size_5x">5dp</dimen>
     <dimen name="margin_size_8x">8dp</dimen>
+    <dimen name="margin_size_10x">10dp</dimen>
     <dimen name="margin_size_16x">16dp</dimen>
 
     <dimen name="padding_size_10x">10dp</dimen>
@@ -12,5 +14,6 @@
 
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="image_owner_photo_size">50dp</dimen>
+    <dimen name="image_height_size">220dp</dimen>
 
 </resources>
