--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,6 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:clipToPadding="false"
+        android:overScrollMode="never"
         android:paddingTop="@dimen/padding_size_5x"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/image_item"
@@ -21,8 +22,8 @@
 
     <ProgressBar
         android:id="@+id/fragment_search_progress_bar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/recycler_progress_bar_size"
+        android:layout_height="@dimen/recycler_progress_bar_size"
         android:layout_gravity="center"
         android:layout_margin="@dimen/margin_size_10x"
         android:indeterminateTint="@color/colorPrimary"
