--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="image_owner_photo_size">50dp</dimen>
     <dimen name="image_height_size">220dp</dimen>
+    <dimen name="recycler_progress_bar_size">30dp</dimen>
 
 </resources>
