--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="image_owner_photo_size">50dp</dimen>
     <dimen name="image_height_size">220dp</dimen>
     <dimen name="recycler_progress_bar_size">30dp</dimen>
+    <dimen name="more_loading_height">100dp</dimen>
 
 </resources>
