--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
 
     <color name="colorPrimary">#000000</color>
     <color name="colorFail">#E60505</color>
+    <color name="colorTag">#F2F2F2</color>
+    <color name="colorTagText">#828282</color>
 </resources>
