--- a/app/src/main/res/layout/layout_loading_error.xml
+++ b/app/src/main/res/layout/layout_loading_error.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="@string/loading_error_retry_text"
         android:textSize="@dimen/text_size_18x"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorTextPrimary"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/margin_size_8x"
         />
