--- a/app/src/main/res/drawable/ic_error_outline.xml
+++ b/app/src/main/res/drawable/ic_error_outline.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="96dp"
     android:height="96dp"
-    android:tint="#828282"
+    android:tint="@color/colorLoading"
     android:viewportWidth="24"
     android:viewportHeight="24"
     >
