--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -3,13 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/margin_size_5x"
     android:layout_marginHorizontal="@dimen/margin_size_10x"
-    >
+    android:layout_marginVertical="@dimen/margin_size_5x">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_item_image"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/image_height_size"
-        />
+        android:layout_height="@dimen/image_height_size" />
 </FrameLayout>
