--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="colorPrimary">#000000</color>
-    <color name="colorTextPrimary">#FFFFFF</color>
+    <color name="colorSecondary">#FFFFFF</color>
     <color name="colorFail">#E60505</color>
     <color name="colorTag">#F2F2F2</color>
     <color name="colorTagText">#000000</color>
