--- a/app/src/main/res/layout/fragment_image_details.xml
+++ b/app/src/main/res/layout/fragment_image_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,83 +7,133 @@
     android:layout_height="match_parent"
     tools:context=".image_details.presentation.ImageDetailsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/margin_size_16x"
-        android:paddingHorizontal="@dimen/padding_size_16x"
-        android:paddingTop="@dimen/padding_size_16x">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_app_logo" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/fragment_image_details_image_owner_photo"
-            android:layout_width="@dimen/image_owner_photo_size"
-            android:layout_height="@dimen/image_owner_photo_size"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_launcher_background" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:context=".image_details.presentation.ImageDetailsFragment"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/fragment_image_details_image_owner_full_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_size_16x"
-            android:maxLines="1"
-            android:textColor="@color/colorSecondary"
-            android:textSize="@dimen/text_size_20x"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/fragment_image_details_image_owner_email"
-            app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_favorite"
-            app:layout_constraintStart_toEndOf="@id/fragment_image_details_image_owner_photo"
-            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
-            tools:text="Name" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/fragment_image_details_image_owner_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_14x"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-            app:layout_constraintStart_toStartOf="@id/fragment_image_details_image_owner_full_name"
-            app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_full_name"
-            tools:text="e@mail" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/fragment_image_details_button_favorite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_size_16x"
-            android:src="@drawable/ic_favorite_border"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-            app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_download"
-            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/fragment_image_details_button_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_save"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/fragment_image_details_image"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_size_16x"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/margin_size_16x"
+            android:paddingHorizontal="@dimen/padding_size_16x"
+            android:paddingTop="@dimen/padding_size_16x">
 
-        <org.apmem.tools.layouts.FlowLayout
-            android:id="@+id/fragment_image_details_tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingVertical="@dimen/padding_size_10x"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/fragment_image_details_image_owner_photo"
+                android:layout_width="@dimen/image_owner_photo_size"
+                android:layout_height="@dimen/image_owner_photo_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_launcher_background" />
 
-</androidx.core.widget.NestedScrollView>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/fragment_image_details_image_owner_full_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_size_16x"
+                android:maxLines="1"
+                android:textColor="@color/colorSecondary"
+                android:textSize="@dimen/text_size_20x"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/fragment_image_details_image_owner_email"
+                app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_favorite"
+                app:layout_constraintStart_toEndOf="@id/fragment_image_details_image_owner_photo"
+                app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo"
+                tools:text="Name" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/fragment_image_details_image_owner_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_14x"
+                app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+                app:layout_constraintStart_toStartOf="@id/fragment_image_details_image_owner_full_name"
+                app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_full_name"
+                tools:text="e@mail" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/fragment_image_details_button_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_size_16x"
+                android:src="@drawable/ic_favorite_border"
+                app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+                app:layout_constraintEnd_toStartOf="@id/fragment_image_details_button_download"
+                app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/fragment_image_details_button_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_save"
+                app:layout_constraintBottom_toBottomOf="@id/fragment_image_details_image_owner_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/fragment_image_details_image_owner_photo" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/fragment_image_details_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_size_16x"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image_owner_photo" />
+
+            <org.apmem.tools.layouts.FlowLayout
+                android:id="@+id/fragment_image_details_tags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="@dimen/padding_size_10x"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fragment_image_details_image" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/favouritesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/margin_size_16x"
+        android:backgroundTint="@color/colorPrimary"
+        android:scaleType="center"
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_favorite_bold_white" />
+
+    <include
+        android:id="@+id/errorLayout"
+        layout="@layout/layout_loading_error"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/progress_bar_size"
+        android:layout_height="@dimen/progress_bar_size"
+        android:indeterminateTint="@color/colorSecondary"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
