--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -7,7 +7,7 @@
     android:layout_marginVertical="@dimen/margin_size_5x">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image_item_image"
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/image_height_size" />
 </FrameLayout>
