add new app logo

--- a/app/src/main/res/layout/fragment_favorite_images.xml
+++ b/app/src/main/res/layout/fragment_favorite_images.xml
@@ -12,7 +12,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_app_logo" />
+        app:navigationIcon="@drawable/ic_new_app_logo" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
