--- a/app/src/main/res/drawable/bg_splash_screen.xml
+++ b/app/src/main/res/drawable/bg_splash_screen.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:opacity="opaque"
-    >
+    android:opacity="opaque">
 
     <item android:drawable="@drawable/bg_black_screen" />
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_app_logo"
-            />
+            android:src="@drawable/ic_new_app_logo" />
     </item>
 </layer-list>
