--- a/app/src/main/res/drawable/bg_tag.xml
+++ b/app/src/main/res/drawable/bg_tag.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    >
+    android:shape="rectangle">
 
     <solid android:color="@color/colorTag" />
 
     <padding
-        android:left="@dimen/padding_size_5x"
-        android:right="@dimen/padding_size_5x"
-        />
+        android:left="@dimen/dp_8"
+        android:right="@dimen/dp_8" />
+
+    <corners android:radius="@dimen/dp_8" />
 
 </shape>
