--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorSecondary">#FFFFFF</color>
     <color name="colorFail">#E60505</color>
-    <color name="colorTag">#F2F2F2</color>
+    <color name="colorTag">#C3BFBF</color>
     <color name="colorTagText">#000000</color>
     <color name="colorLoading">#F2F2F2</color>
 </resources>
