--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="recycler_progress_bar_size">30dp</dimen>
     <dimen name="more_loading_height">100dp</dimen>
 
+    <dimen name="dp_8">8dp</dimen>
+
 </resources>
