--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,11 @@
     <color name="green">#219653</color>
     <color name="gray">#7A7979</color>
 
-    <color name="colorPrimary">#000000</color>
+    <color name="color_primary">#ffffff</color>
     <color name="colorSecondary">#000000</color>
     <color name="colorFail">#E60505</color>
     <color name="colorTag">#F2F2F2</color>
     <color name="colorTagText">#828282</color>
     <color name="colorLoading">#828282</color>
+    <color name="color_black">#000000</color>
 </resources>
