--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,13 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_primary">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/color_black"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/home_toolbar_menu"
         app:navigationIcon="@drawable/ic_new_app_logo">
@@ -46,12 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/margin_size_16x"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/color_black"
         android:scaleType="center"
         app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:rippleColor="@color/colorPrimary"
+        app:rippleColor="@color/color_black"
         app:srcCompat="@drawable/ic_favorite_bold_white" />
 
     <include
