--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,46 +14,81 @@
 
         <action
             android:id="@+id/action_homeFragment_to_favoriteImagesFragment"
-            app:destination="@id/favoriteImagesFragment" />
+            app:destination="@id/favoriteImagesFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
 
         <action
             android:id="@+id/action_homeFragment_to_imageDetailsFragment"
-            app:destination="@id/imageDetailsFragment" />
+            app:destination="@id/imageDetailsFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
 
         <action
             android:id="@+id/action_homeFragment_to_searchFragment"
-            app:destination="@id/searchFragment" />
+            app:destination="@id/searchFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
 
     </fragment>
 
     <fragment
         android:id="@+id/favoriteImagesFragment"
         android:name="com.aslnstbk.unsplash.favorite_images.presentation.FavoriteImagesFragment"
-        android:label="FavoriteImagesFragment" >
+        android:label="FavoriteImagesFragment">
+
         <action
             android:id="@+id/action_favoriteImagesFragment_to_imageDetailsFragment"
-            app:destination="@id/imageDetailsFragment" />
+            app:destination="@id/imageDetailsFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
+        
     </fragment>
 
     <fragment
         android:id="@+id/imageDetailsFragment"
         android:name="com.aslnstbk.unsplash.image_details.presentation.ImageDetailsFragment"
         android:label="fragment_image_details"
-        tools:layout="@layout/fragment_image_details" >
+        tools:layout="@layout/fragment_image_details">
+
         <action
             android:id="@+id/action_imageDetailsFragment_to_searchFragment"
-            app:destination="@id/searchFragment" />
+            app:destination="@id/searchFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
+
         <action
             android:id="@+id/action_imageDetailsFragment_to_favoriteImagesFragment"
-            app:destination="@id/favoriteImagesFragment" />
+            app:destination="@id/favoriteImagesFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
+
     </fragment>
 
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.aslnstbk.unsplash.search.presentation.SearchFragment"
-        android:label="SearchFragment" >
+        android:label="SearchFragment">
+
         <action
             android:id="@+id/action_searchFragment_to_imageDetailsFragment"
-            app:destination="@id/imageDetailsFragment" />
+            app:destination="@id/imageDetailsFragment"
+            app:enterAnim="@anim/slide_enter_left"
+            app:exitAnim="@anim/slide_exit_left"
+            app:popEnterAnim="@anim/slide_enter_right"
+            app:popExitAnim="@anim/slide_exit_right" />
+
     </fragment>
 </navigation>
